[android] Merge Android Studio Iguana Stable
GitOrigin-RevId: c7731a4817e99c87afaeabcfaa718c8ecaaca16b