@@ -25,13 +25,13 @@ import static com.google.common.truth.Truth.assertThat;
 import com.android.tools.idea.mlkit.MlProjectTestUtil;
 import com.android.tools.idea.testing.AndroidProjectRule;
 import com.android.tools.idea.testing.EdtAndroidProjectRule;
+import com.google.common.collect.ImmutableMap;
 import com.intellij.openapi.actionSystem.AnActionEvent;
 import com.intellij.openapi.actionSystem.CommonDataKeys;
 import com.intellij.openapi.actionSystem.PlatformCoreDataKeys;
 import com.intellij.testFramework.MapDataContext;
 import com.intellij.testFramework.RunsInEdt;
 import com.intellij.testFramework.TestActionEvent;
-import java.util.Map;
 import org.jetbrains.android.util.AndroidBundle;
 import org.junit.Before;
 import org.junit.Rule;
@@ -57,7 +57,7 @@ public class ImportMlModelActionTest {
   private void setupProject(String version, int version2) {
     MlProjectTestUtil.setupTestMlProject(projectRule.getProject(), version, version2);
     myEvent = TestActionEvent.createTestEvent(new MapDataContext(
-      Map.of(
+      ImmutableMap.of(
         CommonDataKeys.PROJECT, projectRule.getProject(),
         PlatformCoreDataKeys.MODULE, gradleModule(projectRule.getProject(), ":")
       )
